--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
+# dependencies
 node_modules/
-.env
-__pycache__/
-venv/
-dist/
-build/
 
+# env files
+.env
+.env.local
+.env.development
+.env.production
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# uploads
+/uploads
+
+# OS files
+.DS_Store
+Thumbs.db
+
+env.js
+.env.example
