--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
+# ignore env config file
+config/env.js
+# ignore env config file
+config/cloudinary_env.js
